--- a/index.html
+++ b/index.html
@@ -120,6 +120,18 @@
 						
 					</tr>
 
+					<tr>
+						<td>| Formulario de prueba |</td>
+						<td>| Formulario de prueba |</td>
+						<td>
+							<a href="Formulario.html">
+								<div style="height: 100%;width: 100%;">
+									| FORMULARIO HTML |
+								</div>
+							</a>
+								</td>
+					</tr>
+
 				</table>
 
 
